ensure headings align left after floating figures

--- a/src/about/ui/about.sass
+++ b/src/about/ui/about.sass
@@ -10,13 +10,14 @@
 
 [id^="about-tabpane-"] h3
   padding-top: 10px
+  clear: left
 
 [id^="about-tabpane-"] h4
   padding-top: 10px
 
 [id^="about-tabpane-"] blockquote
   padding-left: 40%
-  
+
 [id^="about-tabpane-"] .Introduction
 
   &__200px
@@ -30,15 +31,15 @@
   &__300px
     width: 300px
     height: auto
-    
+
   &__350px
     width: 350px
     height: auto
-    
+
   &__400px
     width: 400px
     height: auto
-    
+
   &__450px
     width: 450px
     height: auto
@@ -64,7 +65,7 @@
 
   &__creativeCommonsLicense
     text-align: center
-  
+
   &__fossey
     float: right
     width: 300px
@@ -93,4 +94,3 @@
 
   &__secondLineOfParallelism
     padding-left: 1em
-
